# light

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-01-light-browser.md
docs/superpowers/specs/: 2026-04-01-light-browser-design.md
macos/Light.app/Contents/: Info.plist
macos/Light.app/Contents/Resources/: AppIcon.icns
scripts/: package-macos.sh
src/: app.rs  bookmarks.rs  bookmarks_page.rs  chrome.rs  ipc.rs  keys.rs  main.rs  navbar.rs  settings.rs  settings_page.rs  tab.rs  url.rs
src/engine/: mod.rs  wry_engine.rs
