[package]
name = "light"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.50"
winit = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication"] }
