[package]
name = "light"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Light"
path = "src/main.rs"

[dependencies]
wry = "0.50"
tao = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication", "NSResponder", "NSImage"] }
